[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/Inventory/Inventory.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/UIMessages/AlertMessage.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/Island/ObjectivesDisplay.gd" type="Script" id=3]
[ext_resource path="res://scenes/Island/HUD.gd" type="Script" id=4]
[ext_resource path="res://scenes/Island/TooltipContainer.gd" type="Script" id=5]

[sub_resource type="StyleBoxFlat" id=1]
content_margin_left = 5.0
content_margin_right = 5.0
content_margin_top = 5.0
content_margin_bottom = 5.0
bg_color = Color( 0.113725, 0.113725, 0.113725, 0.584314 )

[node name="HUD" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Inventory" parent="." instance=ExtResource( 1 )]

[node name="ExperimenterInventory" parent="." instance=ExtResource( 1 )]
visible = false

[node name="AlertMessage" parent="." instance=ExtResource( 2 )]

[node name="StaminaBar" type="Control" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -120.0
margin_top = 5.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgressBar" type="ProgressBar" parent="StaminaBar"]
margin_top = 16.0
margin_right = 111.0
margin_bottom = 30.0
step = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="StaminaBar"]
margin_right = 109.0
margin_bottom = 14.0
text = "Stamina"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TooltipContainer" type="Control" parent="."]
visible = false
self_modulate = Color( 0.415686, 0.129412, 0.129412, 0.0862745 )
grow_horizontal = 2
grow_vertical = 2
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="TooltipContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -50.0
margin_top = -10.0
margin_right = 50.0
margin_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
color = Color( 0.113725, 0.113725, 0.113725, 0.584314 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tooltip" type="Label" parent="TooltipContainer/Background"]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 6
text = "Hello world"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ObjectivesDisplay" type="Control" parent="."]
margin_left = 5.0
margin_top = 45.0
margin_right = 195.0
margin_bottom = 70.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="ObjectivesDisplay"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/normal = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "-  Just win lol"
text = "-  Just win lol"
fit_content_height = true
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="use_item" from="Inventory" to="." method="_on_Inventory_use_item"]
[connection signal="use_item" from="ExperimenterInventory" to="." method="_on_Inventory_use_item"]
