[gd_scene load_steps=17 format=2]

[ext_resource path="res://objects/Islander/Islander.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/Island/Input.gd" type="Script" id=3]
[ext_resource path="res://objects/Tree/Tree.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/Inventory/Inventory.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/1x1.png" type="Texture" id=6]
[ext_resource path="res://scenes/Island/TooltipContainer.gd" type="Script" id=7]
[ext_resource path="res://scenes/AlertMessage/AlertMessage.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/Island/Props.gd" type="Script" id=9]
[ext_resource path="res://scenes/Island/HUD.gd" type="Script" id=10]
[ext_resource path="res://objects/CollectableItems/Coconut.tscn" type="PackedScene" id=11]
[ext_resource path="res://objects/CollectableItems/Rock.tscn" type="PackedScene" id=12]
[ext_resource path="res://scenes/Island/Projectiles.gd" type="Script" id=13]
[ext_resource path="res://objects/Crab/Crab.tscn" type="PackedScene" id=14]
[ext_resource path="res://scenes/Island/AIController.gd" type="Script" id=15]
[ext_resource path="res://scenes/Island/IslandLayout.tscn" type="PackedScene" id=16]

[sub_resource type="CircleShape2D" id=1]
radius = 4.61711

[node name="Island" type="Node2D"]
script = ExtResource( 3 )

[node name="GroundTiles" parent="." instance=ExtResource( 16 )]

[node name="Projectiles" type="Node2D" parent="."]
script = ExtResource( 13 )

[node name="Props" type="YSort" parent="."]
script = ExtResource( 9 )

[node name="Islander" parent="Props" instance=ExtResource( 2 )]
position = Vector2( 504.569, 333.04 )

[node name="PlayerInteraction" type="Area2D" parent="Props/Islander"]

[node name="Shape" type="CollisionShape2D" parent="Props/Islander/PlayerInteraction"]
shape = SubResource( 1 )

[node name="StaminaTimer" type="Timer" parent="Props/Islander"]
wait_time = 5.0
autostart = true

[node name="Tree" parent="Props" instance=ExtResource( 4 )]
position = Vector2( 569.19, 329.734 )

[node name="Tree2" parent="Props" instance=ExtResource( 4 )]
position = Vector2( 422.818, 281.651 )

[node name="Tree3" parent="Props" instance=ExtResource( 4 )]
position = Vector2( 436.254, 370.746 )

[node name="Tree4" parent="Props" instance=ExtResource( 4 )]
position = Vector2( 668.185, 252.659 )

[node name="Tree5" parent="Props" instance=ExtResource( 4 )]
position = Vector2( 647.679, 352.362 )

[node name="Tree6" parent="Props" instance=ExtResource( 4 )]
position = Vector2( 599.596, 378.898 )

[node name="Coconut" parent="Props" instance=ExtResource( 11 )]
position = Vector2( 472.533, 332.375 )

[node name="Rock" parent="Props" instance=ExtResource( 12 )]
position = Vector2( 531.143, 356.783 )

[node name="Rock2" parent="Props" instance=ExtResource( 12 )]
position = Vector2( 531.143, 356.783 )

[node name="Rock3" parent="Props" instance=ExtResource( 12 )]
position = Vector2( 531.143, 356.783 )

[node name="Crab" parent="Props" instance=ExtResource( 14 )]
position = Vector2( 696, 402 )

[node name="Crab2" parent="Props" instance=ExtResource( 14 )]
position = Vector2( 480.553, 405.15 )

[node name="TooltipContainer" type="Node2D" parent="."]
visible = false
self_modulate = Color( 0.415686, 0.129412, 0.129412, 0.0862745 )
script = ExtResource( 7 )

[node name="Background" type="Sprite" parent="TooltipContainer"]
self_modulate = Color( 0.113725, 0.113725, 0.113725, 0.584314 )
scale = Vector2( 100, 16 )
texture = ExtResource( 6 )

[node name="Tooltip" type="Label" parent="TooltipContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 6
text = "Hello world"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HUD" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Inventory" parent="HUD" instance=ExtResource( 5 )]

[node name="AlertMessage" parent="HUD" instance=ExtResource( 8 )]

[node name="StaminaBar" type="Control" parent="HUD"]
margin_left = 910.554
margin_top = 2.12141
margin_right = 1020.55
margin_bottom = 42.1214
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgressBar" type="ProgressBar" parent="HUD/StaminaBar"]
margin_top = 16.0
margin_right = 111.0
margin_bottom = 30.0
step = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="HUD/StaminaBar"]
margin_right = 109.0
margin_bottom = 14.0
text = "Stamina"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AIController" type="Node" parent="."]
script = ExtResource( 15 )
[connection signal="spawn_item" from="Projectiles" to="Props" method="_on_Projectiles_spawn_item"]
[connection signal="inventory_slot_change" from="Props/Islander" to="HUD" method="_on_Islander_inventory_slot_change"]
[connection signal="stamina_change" from="Props/Islander" to="HUD" method="_on_Islander_stamina_change"]
[connection signal="throw_rock" from="Props/Islander" to="Projectiles" method="_on_Islander_throw_rock"]
[connection signal="use_coconut_without_rock" from="Props/Islander" to="HUD" method="_on_Islander_use_coconut_without_rock"]
[connection signal="area_entered" from="Props/Islander/PlayerInteraction" to="." method="_on_PlayerInteraction_area_entered"]
[connection signal="area_exited" from="Props/Islander/PlayerInteraction" to="." method="_on_PlayerInteraction_area_exited"]
[connection signal="timeout" from="Props/Islander/StaminaTimer" to="Props/Islander" method="_on_StaminaTimer_timeout"]
[connection signal="use_item" from="HUD/Inventory" to="Props/Islander" method="_on_Inventory_use_item"]
